# titles

./: .commit-push.bat  .gitattributes  .gitignore  LICENSE  README.md  SKILL.md  install-viral-titles.bat  install-viral-titles.sh  skill.md  update-viral-titles.bat  update-viral-titles.sh
data/: _version  daily-hot-titles-2026-07-21.md  daily-hot-titles-2026-07-22.md  daily-skill-suggestion-2026-07-21.md  title-corpus.jsonl  title-trends-rolling.md
mcp-server/: README.md  install.bat  install.ps1  pyproject.toml  start-mcp.bat  start-mcp.ps1
mcp-server/data/: title-corpus.jsonl  title-trends-rolling.md
mcp-server/mcp_config_examples/: claude_desktop_config.json  openclaw_config.json
mcp-server/src/viral_titles_mcp/: __init__.py  __main__.py  data.py  server.py
mcp-server/tests/: test_tools.py
references/: formulas-recent.md  formulas.md  platform-cheatsheet.md
