[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-titles-mcp"
version = "0.1.0"
description = "MCP server exposing viral-title-generator skill data (formulas, platform cheatsheet, real corpus) for any MCP client."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "viral-title-generator contributors" }]
license = { text = "MIT" }
keywords = ["mcp", "title-generator", "writing", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
viral-titles-mcp = "viral_titles_mcp.__main__:main"

[project.urls]
"Homepage" = "https://example.com/viral-titles-mcp"
"Bug Tracker" = "https://example.com/viral-titles-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
viral_titles_mcp = ["../data/*.md", "../data/*.jsonl"]